--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/DamICON.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>霧社水庫3D</title>
+	<meta name="description" content="霧社水庫 3D 圖台（請輸入通行碼進入）" />
 </head>
 
 <style>
