--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ div.vertical {
 		<div class="horizontal">
 			<div class="vertical">
 				<div class="box">
+					<meta name="description" content="霧社水庫 3D 圖台（請輸入通行碼進入）" />
 					<input style="margin: 16px; text-align: center;" id="password" type="password" placeholder="請輸入通行碼" /> <br />
 					<button id="loginbutton" type="button">Enter</button>
 					<p id="wrongPassword" style="display: none">通行碼錯誤</p>
